# better_pedal_board

brain/: CMakeLists.txt  build-raspberry-pi.sh
brain/src/: brain_controller.cpp  brain_controller.h  main.cpp  mem_limits.h
brain/src/core/: pedal_context.h  pedal_source_state.h  pedal_target_state.h
brain/src/platform/: platform_factory.h  platform_service.cpp  platform_service.h
brain/src/program/: action_runner.h  clock_service.cpp  clock_service.h  clock_state.h  device_context.h  event_context.h  layer_state.h  layer_state_list.cpp  layer_state_list.h  layer_state_node.h  phrase_context.h  phrase_state.h  program.h  program_context.h  program_service.cpp  program_service.h  state_change.h  target_action.h  target_action_runner.cpp  target_action_runner.h  target_program.cpp  target_program.h  target_program_context.cpp  target_program_context.h  target_program_state.h  target_state_action_factory.h  target_trigger_context.h  tempo_action.h  tempo_program_context.h  tempo_program_state.h  tempo_state.h  trigger_context.h  trigger_state.h
brain/src/program/data/: program_repository.cpp  program_repository.h
brain/src/program/target_actions/: mimic_action.cpp  mimic_action.h  set_state_action.cpp  set_state_action.h  target_state_action_factory.cpp
brain/src/program/tempo_actions/: tap_tempo_action.cpp  tap_tempo_action.h
brain/src/program/tests/: CMakeLists.txt  test.sh
pedal/: CMakeLists.txt  build-simulator.sh  clean.sh
pedal/device/: CMakeLists.txt
pedal/device/include/: device_service.h
pedal/device/src/: device_service.cpp  devices.h  source_device.h  source_device_factory.h  target_device.h  target_device_factory.h
pedal/device/src/data/: device_repository.cpp  device_repository.h
pedal/device/src/source_devices/: latching_footswitch.cpp  latching_footswitch.h  nonlatching_footswitch.cpp  nonlatching_footswitch.h  source_device_factory.cpp
pedal/device/src/target_devices/: digital_switch.cpp  digital_switch.h  target_device_factory.cpp
pedal/pedal/src/: command_controller.cpp  command_controller.h  main.cpp
pedal/platform/: CMakeLists.txt
pedal/platform/include/: command.h  platform_factory.h  platform_service.h
pedal/platform/src/: platform.h  platform_service.cpp
shared/: CMakeLists.txt
shared/include/data/: data_store.h
shared/include/platform/simulator/: simulator_serial_reader.h
shared/src/data/: data_store.cpp
shared/src/platform/: command_bus.cpp
shared/src/platform/simulator/: simulator_serial_reader.cpp
(+16 files in other folders)
